This was the only way I could find to prevent scroll jumps for items which have data-scroll-target and after default transitions. I'm constantly fighting against the system ffs!
Maybe related https://github.com/locomotivemtl/locomotive-scroll/issues/215

--- a/containers/Template/_Template.scss
+++ b/containers/Template/_Template.scss
@@ -22,6 +22,19 @@
     // }
   }
 
+  :root.is-transition\:template\:after & {
+    [data-scroll-target] {
+      transform: none !important;
+      // transition: 0.3s !important;
+    }
+  }
+
+  :root.is-transition\:template\:after\:withDelay & {
+    [data-scroll-target] {
+      transition: 0.1s !important;
+    }
+  }
+
   &.is-transition\:template {
     position: relative;
   }
